--- a/_data/nav_links.yml
+++ b/_data/nav_links.yml
@@ -2,8 +2,7 @@
   title: Slash
 - url: /backslash
   title: Backslash
-- url: /scotty
-  title: Scotty
-
+#- url: /scotty
+#  title: Scotty
 - url: /blog.html
   title: Blog
